--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#demo">使用示例</a></li>
                 <li><a href="#advantages">产品优势</a></li>
                 <li><a href="#pricing">价格方案</a></li>
-                <li><a href="http://127.0.0.1:5000/login" class="btn btn-secondary">登录</a></li>
+                <li><a href="http://44f0f4f6.r32.cpolar.top/login" class="btn btn-secondary">登录</a></li>
             </ul>
         </div>
     </header>
@@ -31,7 +31,7 @@
             <h1>安全可靠的文件存储与管理平台</h1>
             <p>我的网盘提供高效的文件上传下载、智能压缩、存储空间监控等功能，让您的文件管理更加简单便捷。</p>
             <div class="cta-buttons">
-                <a href="http://127.0.0.1:5000/register" class="btn btn-primary">免费注册</a>
+                <a href="http://44f0f4f6.r32.cpolar.top/register" class="btn btn-primary">免费注册</a>
                 <a href="#features" class="btn btn-secondary">了解更多</a>
             </div>
         </div>
@@ -99,7 +99,7 @@
                     <h3>直观易用的界面设计</h3>
                     <p>我的网盘采用现代化的界面设计，简洁明了，操作便捷。无论是文件上传、下载，还是文件夹管理，都能轻松完成。</p>
                     <p>系统提供了清晰的存储空间使用情况展示，让您随时了解自己的存储状态。同时，智能的文件压缩功能可以帮助您节省大量存储空间。</p>
-                    <a href="http://127.0.0.1:5000/login" class="btn btn-primary">立即体验</a>
+                    <a href="http://44f0f4f6.r32.cpolar.top/login" class="btn btn-primary">立即体验</a>
                 </div>
                 <div class="demo-image">
                     <!-- 这里将放置产品截图 -->
@@ -231,7 +231,7 @@
                         <li><i class="fas fa-times"></i> 高级文件压缩</li>
                         <li><i class="fas fa-times"></i> 优先技术支持</li>
                     </ul>
-                    <a href="http://127.0.0.1:5000/register" class="btn btn-primary">立即注册</a>
+                    <a href="http://44f0f4f6.r32.cpolar.top/register" class="btn btn-primary">立即注册</a>
                 </div>
                 <div class="pricing-card popular">
                     <div class="popular-badge">最受欢迎</div>
@@ -246,7 +246,7 @@
                         <li><i class="fas fa-check"></i> 优先技术支持</li>
                         <li><i class="fas fa-check"></i> 无广告体验</li>
                     </ul>
-                    <a href="http://127.0.0.1:5000/register" class="btn btn-primary">立即升级</a>
+                    <a href="http://44f0f4f6.r32.cpolar.top/register" class="btn btn-primary">立即升级</a>
                 </div>
                 <div class="pricing-card">
                     <h3>企业版</h3>
@@ -260,7 +260,7 @@
                         <li><i class="fas fa-check"></i> 7x24小时技术支持</li>
                         <li><i class="fas fa-check"></i> 定制化服务</li>
                     </ul>
-                    <a href="http://127.0.0.1:5000/register" class="btn btn-primary">立即升级</a>
+                    <a href="http://44f0f4f6.r32.cpolar.top/register" class="btn btn-primary">立即升级</a>
                 </div>
             </div>
         </div>
